# oops-rs

./: .gitignore  Cargo.toml  Oops.code-workspace  README.md
core/: Cargo.toml
crates/macros/: Cargo.toml
examples/: basic.rs  simple.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs  nah.rs  nvmd.rs  welp.rs
