[package]
name = "oops"
version = "0.0.0"
edition = "2021"

# TODO: Remove this when we're ready to publish.
publish = false

[features]
default = ["debug", "macros"]
debug = ["tracing", "oops-core/debug", "oops-macros/debug"]
verbose = ["oops-core/verbose", "oops-macros/verbose"]
macros = ["oops-macros"]

#--
[lib]
name = "oops"
path = "./src/lib.rs"

#--
[[example]]
name = "oops-basic"
path = "./examples/basic.rs"
required-features = ["macros", "debug"]

#--
[dependencies]

[dependencies.oops-core]
path = "./core"

[dependencies.oops-macros]
path = "./macros"
optional = true

[dependencies.tracing]
version = "0.1"
default-features = false
optional = true
features = [
    "log",
    "log-always",
    "attributes",
    "tracing-attributes",
    "max_level_trace",
    "release_max_level_warn",
]
