[package]
name = "oops-core"
version = "0.0.0"
edition = "2021"
publish = false

[features]
default = []
debug = ["tracing"]
verbose = []

#--
[lib]
name = "oops_core"

#--
[dependencies]

[dependencies.tracing]
version = "0.1"
default-features = false
optional = true
features = [
    "log",
    "log-always",
    "attributes",
    "tracing-attributes",
    "max_level_trace",
    "release_max_level_warn",
]
