[package]
name = "oops-macros"
version = "0.0.0"
edition = "2021"
publish = false

[features]
default = []
debug = ["tracing"]
verbose = []

#--
[lib]
name = "oops_macros"
proc-macro = true

#--
[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"

[dependencies.oops-core]
path = "../core"

[dependencies.tracing]
version = "0.1"
optional = true

[dev-dependencies.tracing]
version = "0.1"
default-features = false
features = [
    "log",
    "log-always",
    "attributes",
    "tracing-attributes",
    "max_level_trace",
    "release_max_level_warn",
]
